# GEO_AI_PLATFORM

./: .gitattributes  .gitignore  README.md  clear.sh  docker-compose.yml  stand-bootstrap.sh
database/: init.sql
geo_ai_backend/: .dockerignore  .editorconfig  .env_example  .gitignore  ARCHITECTURE_README.rst  LICENSE  README.md  key.pem  main.py  pyproject.toml
geo_ai_backend/alembic/: env.py
geo_ai_backend/alembic/versions/: 02318f5d35b8__create_user_model.py  037228548b8a_project_id_history.py  062fd5a64e64_project_preview_layer_id.py  1984357bace7_update_classes_defualt_model.py  1a9d329d75e2_project_task_result.py  1f3ed97c1c3c_value_owner_id_error_history.py  2394d48131ae_column_owner_id_action_history.py  2eb3aff2cab8_create_action_history_model.py  2f4679475b91_column_owner_id_compare_projects.py  347699a03658_feat_ml_model_deeplab_col.py  3b58ecd65f84_value_owner_id_action_history.py  4688bb386ffc_new_model_garbage.py  46cb84ee44fc_change_params_garbage.py  4f70d5b78818_ml_experiment_name.py  531118454eef_projects.py  59949d09fb54_project_preview_selected_images.py  5e748323b43a_ocr_models.py  6075461333f0_create_objects_history_model.py  63b7f386c297_fix_const_models.py  6626c298b0ac_deleted_old_default_model_flag.py  67741e6b5dd9_new_aerial_yolo_model.py  689feb2e9028_project_type_by_action_history.py  6b9b514d0454_column_owner_id_error_history.py  6bb2b7fcab13_users_col_external_user.py  6c147d157ea8_value_owner_id_projects.py  75014a2b15f0_ml_effnetb0_051023_constant.py  752f9952ce2b_upd_model.py  768a759c36d3_compare_default_value.py  770e5f520823_ml_table.py  7a85d46faa11_ml_buildings360_r50_250923_constant.py  874a7ba8624e_username_field.py  8cd1dd92441f_change_values_scale_factor.py  9119c61e12bb_feat_new_model.py  986ce08556c5_restore_access.py  (+35 more)
geo_ai_backend/docs/: DEV_ENVIRONMENT.md
geo_ai_backend/geo_ai_backend/: __init__.py  certificate.pem  config.py  database.py  models.py  routers.py  utils.py  worker.py
geo_ai_backend/tests/: conftest.py
(+214 files in other folders)
